# MDM-proyectos-movil

./: .gitignore  CMakeLists.txt  GisProcessor.cpp  GisProcessor.h  README.md  check-qgis-load.ps1  env_osgeo_qt.bat  main.cpp  main.qml  vcpkg.json
